appId: com.kodaksmile
---
- runFlow:
    when:
      visible: ${output.editor.filterTab}
    commands:
      - tapOn: ${output.editor.filterTab}
      - waitForAnimationToEnd
      # pick first filter option area
      - tapOn:
          point: "20%,85%"

- runFlow:
    when:
      visible: ${output.editor.editTab}
    commands:
      - tapOn: ${output.editor.editTab}
      - waitForAnimationToEnd