appId: com.kodaksmile
name: ED_07 - Warmth
---

- tapOn: "Warmth"
- swipe:
    start: "30%,90%"
    end: "80%,90%"
- tapOn: "Done"
